--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap");
+
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -14,6 +15,7 @@ body {
 }
 
 header {
+	padding: 0 96px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -42,11 +44,13 @@ main {
 	flex: 1;
 	outline: 1px solid black; /* for debugging */
 }
+
 h1 {
 	font-size: 48px;
 	font-weight: 700;
 	color: #f9faf8;
 }
+
 main > div {
 	outline: 1px solid black; /* for debugging */
 	flex: 1;
