--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap");
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -88,7 +87,6 @@ footer {
 }
 
 .section2 {
-	flex: 1;
 	padding: 0 196px;
 	margin: 32px 0;
 }
@@ -119,4 +117,19 @@ footer {
 	aspect-ratio: 1 / 1;
 	border: #3882f6 solid 2px;
 	border-radius: 12px;
+}
+
+.quote {
+	background-color: #e5e7eb; /* for debugging */
+	padding: 16px 384px;
+}
+.quote p:first-child {
+	font-size: 24px;
+	color: #1f2937;
+	font-style: italic;
+	font-weight: 300;
+}
+
+.quote p:nth-child(2) {
+	text-align: right;
 }
